# python_tls_implementation

./: .gitignore  pyproject.toml
python_tls_implementation/tcp/: client.py  server.py
python_tls_implementation/tls/: record.py
python_tls_implementation/tls/handshake/: client_messages.py  messages.py  server_messages.py
python_tls_implementation/tls/handshake/extensions/: base.py
