[project]
name = "python-tls-implementation"
version = "0.1.0"
description = ""
authors = [
    {name = "rojoyin",email = "rojoyin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
